--- a/frontend/html.html
+++ b/frontend/html.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🏋️ Penjadwalan Gym Mingguan 🏋️</h1>
+        <h1> Penjadwalan Gym Mingguan </h1>
         
         <!-- =============== INPUT FORM =============== -->
         <form id="schedule-form">
@@ -21,7 +21,7 @@
 
             <!-- User Preferences Section -->
             <div class="form-section">
-                <div class="section-title">👤 Preferensi Pengguna</div>
+                <div class="section-title">Preferensi Pengguna</div>
                 
                 <div class="form-group">
                     <label for="gender">Jenis Kelamin:</label>
@@ -47,7 +47,7 @@
                 </div>
             </div>
 
-            <button type="submit" class="submit-btn">🚀 Buat Jadwal Latihan</button>
+            <button type="submit" class="submit-btn">Buat Jadwal Latihan</button>
         </form>
 
         <!-- =============== RESULT CONTAINERS =============== -->
